@@ -1,3 +1,8 @@
+Fri Jul 27 23:29:10 2001  Brian Gough  <bjg@network-theory.co.uk>
+
+	* math.c (gsl_complex_cos): avoid returning negative zero for the
+ 	imaginary part when the argument is purely real
+
 Wed Mar 21 14:40:34 2001  Brian Gough  <bjg@network-theory.co.uk>
 
 	* gsl_complex.h (GSL_COMPLEX_P): added macro to point to beginning
